welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
	if (a==2 && a==b && a==c) {
		return 10
	}
	
}
